add author key value to package.json

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "url": "git+https://github.com/colewendling/zenterest.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Cole Wendling",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/colewendling/zenterest/issues"
