--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ bundle.js*
 bundle.js.map
 /public/assets
 .byebug_history
-npm-debug.log
 tmp/cache/assets/
-log/development.log
 tmp/pids/server.pid
+
 log/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
